# llm_agents_system

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.cursor/_unused/: README.md
.cursor/_unused/agents/: implementer-cpp.md
.cursor/_unused/rules/: bindings.md  hotpath.md
.cursor/_unused/skills/: impl-cpp.md  pybind.md
.cursor/agents/: analyst-code.md  analyst.md  architect.md  critic.md  decomposer.md  environment.md  implementer-ml.md  implementer-python.md  memory-writer.md  planner.md  reviewer.md  spec-writer.md  test-designer.md  tester.md
.cursor/commands/: arch-audit.md  arch-inventory-sync.md  arch-map-update.md  checkpoint.md  complete-request.md  complete-task.md  implement-step.md  memory-update.md  new-task.md  review-pr.md  setup-project.md
.cursor/mcp/: memory-palace.md  registry.md  serena.md
.cursor/memory/: status.md
.cursor/memory/architecture/: checklist.md  inventory.md  map.md
.cursor/memory/decisions/: adr-log.md
.cursor/pipeline/: loop-design.md  loop-impl.md  pipeline.md
.cursor/rules/: abi.md  arch.md  build.md  cpp.md  critic.md  decompose.md  determinism.md  dialog.md  memory-palace.md  memory.md  ml.md  no-deps-touch.md  planning.md  python.md  review.md  spec.md  testing.md
.cursor/skills/: arch-check.md  arch-decision.md  code-review.md  critique.md  decompose.md  dep-analysis.md  dialog.md  env-setup.md  impl-ml.md  impl-python.md  memory-recall.md  memory-write.md  metrics.md  planning.md  spec-writing.md  test-design.md  testing.md
.cursor/tasks/: task-template.md
.github/workflows/: ci.yml
configs/: default.yaml
configs/observability/: otel-collector.yaml
deploy/: .dockerignore  Dockerfile  docker-compose.yml
docs/: index.md
docs/core/: agent_memory.md  hierarchical_agents.md  long_context.md  planning.md  prompting.md  replay_analysis.md  tool_orchestration.md
docs/data/: connectors.md  ingestion.md  parsers.md
docs/evaluation/: benchmarking.md  framework.md  hallucination.md  prompts.md
docs/infra/: cost_latency_optimization.md  guardrails.md  inference_routing.md  model_hub.md  observability.md  tracing.md
docs/rag/: embeddings.md  indexing.md  pipeline.md  reranking.md  retrieval.md  vector_store.md
docs/serving/: api.md
docs/training/: datasets.md  experiment_tracking.md  fine_tuning.md
src/llm_agents/: __init__.py  config.py
tests/: conftest.py
tests/unit/: test_package_imports.py
(+215 files in other folders)
