[project]
name = "llm-agents-system"
version = "0.0.1"
description = "A Python platform for building and orchestrating LLM-based agent systems."
readme = "README.md"
requires-python = ">=3.12"
# Core stays dependency-light on purpose. Heavy integrations are opt-in extras below;
# code calls thin interfaces and concrete backends are pluggable adapters.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pydantic>=2.0",
]
# Retrieval-augmented generation: embeddings + local vector index.
rag = [
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
]
# Local model inference (GPU/CPU). vLLM typically requires a Linux/CUDA host.
local-inference = [
    "llama-cpp-python>=0.3",
    "vllm>=0.6; platform_system == 'Linux'",
]
# Offline fine-tuning and MLOps tracking.
training = [
    "transformers>=4.44",
    "peft>=0.13",
    "datasets>=3.0",
    "mlflow>=2.16",
]
# Experiment/data tracking (optional alongside training).
tracking = [
    "wandb>=0.18",
    "dvc>=3.0",
]
# HTTP serving.
serving = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
# pgvector PostgreSQL vector-store adapter (requires a running PostgreSQL with the pgvector extension).
pgvector = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]
# Weaviate vector-store adapter (requires a running Weaviate instance).
weaviate = [
    "weaviate-client>=4.6",
]
# Chroma vector-store adapter (requires a running or embedded Chroma instance).
chroma = [
    "chromadb>=0.5",
]
# Elasticsearch vector-store adapter (requires a running Elasticsearch 8+ instance).
elasticsearch = [
    "elasticsearch>=8.0",
]
# OpenAI embeddings API adapter.
openai = [
    "openai>=1.0",
]
# Cohere embeddings API adapter.
cohere = [
    "cohere>=5.0",
]
# NVIDIA NeMo Guardrails adapter.
nemo = [
    "nemoguardrails>=0.9",
]
# Data connectors and document parsers for ingestion.
data = [
    "psycopg[binary]>=3.2",
    "atlassian-python-api>=3.41",
    "pypdf>=5.0",
    "python-docx>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
